repair favicon page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/script.js"></script>
     <title>Praca domowa moduł_04 Kantor</title>
+    <link rel="shortcut icon" href="img/icon.png"/>
     <meta property="og:image" content="img/iconPage.png">
 </head>
 
