index.html add icon page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/script.js"></script>
     <title>Praca domowa moduł 4 Kantor</title>
+    <link rel="shortcut icon" href="img/icon.png"/>
+    <meta property="og:image" content="img/iconPage.png">
 </head>
 <body class="page">
     <header class="header">
