--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +9,52 @@
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/script.js"></script>
     <title>Praca domowa moduł 4 Kantor</title>
-    <link rel="shortcut icon" href="img/icon.png"/>
+    <link rel="shortcut icon" href="img/icon.png" />
     <meta property="og:image" content="img/iconPage.png">
 </head>
+
 <body class="page">
     <header class="header">
         <h1 class="title">
             KANTOR
         </h1>
+        <p class="header__description">
+            Ten kantor zamienia walutę euro z polskim złotym
+        </p>
     </header>
     <form action="" class="form js-form">
-        <fieldset class="form__fieldset">
-            <legend class="form__legend"></legend>
+        <legend class="form__legend"> Kantor EUR i PLN </legend>
+        <p>
+            <label>
+                Kwota
+                <input class="form__input form__input--inputPrice js-inputPrice" type="number" min="1" max="1000000"
+                    step="0.01" required placeholder="podaj zamienianą kwotę" step="any">
+            </label>
+
+            <select class="form__select--moneyCurrency js-moneyCurrency" name="currencyInput">
+                <option selected>PLN / Złoty</option>
+                <option>EUR / Euro</option>
+            </select>
+            <br>
+            zostanie podana w
+            <strong>
+                <span class="js-currency">euro (EUR)</span>
+            </strong>
+            po podaniu aktualnego kursu:
+            <br>
+            <strong>
+                <span class="js-currentCourse">(EUR / PLN)</span>
+            </strong>
+            <input class="form__input form__input--currentCourse js-inputCurrentCourse" type="number"
+                placeholder="wprowadź aktualny" min="0.0001" max="10" step="0.0001" required>
+            <br>
+        </p>
+        <button class="form__button" type="submit">Wyślij by uzyskać wynik</button>
+
+        <strong>&nbsp; Zamieniona kwota to: <span class="form__strong--finalAmount js-finalAmount"></span></strong>
+
         </fieldset>
     </form>
 </body>
+
 </html>
