--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Ten kantor zamienia walutę euro z polskim złotym
         </p>
     </header>
-    <div class="body__div">
+    <container class="container">
         <form action="" class="form js-form">
                 <legend class="form__legend"> Kantor EUR i PLN </legend>
                 <p>
@@ -56,7 +56,7 @@
                 <strong>&nbsp; Zamieniona kwota to: <span
                         class="form__strong--finalAmount js-finalAmount"></span></strong>
         </form>
-    </div>
+    </container>
 </body>
 
 </html>
